# toralize

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  install.sh  main.c  toralize  toralize.c  toralize.h  toralize.sh
src/: toralize.c  toralize.h
